--- a/Deploy-Using-Jenkins-&-RBAC/2. Install-Jenkins.md
+++ b/Deploy-Using-Jenkins-&-RBAC/2. Install-Jenkins.md
@@ -29,3 +29,16 @@ sudo apt-get update
 ```bash
 sudo apt-get install jenkins
 ```
+### Step 5: Install Plugins
+
+```bash
+
+1. **Kubernetes :: Pipeline :: DevOps Steps**
+
+2. **Kubernetes CLI Plugin**
+
+3. **Kubernetes Credentials Plugin**
+
+4. **Kubernetes plugin**
+
+```
