--- a/Deploy-Using-Jenkins-&-RBAC/2. Install-Jenkins.md
+++ b/Deploy-Using-Jenkins-&-RBAC/2. Install-Jenkins.md
@@ -33,12 +33,12 @@ sudo apt-get install jenkins
 
 ```bash
 
-1. **Kubernetes :: Pipeline :: DevOps Steps**
+1. Kubernetes :: Pipeline :: DevOps Steps
 
-2. **Kubernetes CLI Plugin**
+2. Kubernetes CLI Plugin
 
-3. **Kubernetes Credentials Plugin**
+3. Kubernetes Credentials Plugin
 
-4. **Kubernetes plugin**
+4. Kubernetes plugin
 
 ```
